2022-03-11  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/diff.pk: Load pk-table.pk.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/pk-dump-minimal.pk (dump): Remove classes.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (VUCMD_FINISH): New macro.
	(main): Send VUCMD_FINISH to signal the end-of-vu.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (VUKIND_CLEAR): s/VUKIND_/VUCMD_/.
	(VUKIND_APPEND): Likewise.
	(VUCMD_HIGHLIGHT): New macro.
	(VUCMD_FILTER): Likewise.
	(termout_vu_append): Update.
	(main): Send VUCMD_FILTER before other vu stuff.
	* poked/poked.pk (vu_ios): Remove.
	(__vu_rng): Likewise.
	(__vu_filter): New variable.
	(vu): Add two new args: `filt` and `filts`.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (OUTCMD_ERR): New macro.
	* poked/poked.pk (__err_send): New function to report errors.
	(poked_ehandler): Change default error handler to use `__err_send`
	instead of `print`.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/usock.h (usock_out): Change the function prototype: re-order
	`kind` and `chan`; change type of `data` to `const void *`.
	* poked/usock.c (usock_out): Likewise.
	* poked/poked.c (poked_buf_send): Adapt to new function prototype.
	And remove unused variable.
	(iteration_send): Adapt to new function prototype.
	(main): Likewise.
	(tif_puts): Likewise.
	(tif_printf): Likewise.
	(tif_indent): Likewise.
	(tif_class): Likewise.
	(tif_class_end): Likewise.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (main): Don't send empty EVAL msgs in the
	beginning.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* poked/poked.c (OUTCMD_EVAL_BEGIN): Removed.
	(OUTCMD_EVAL_END): Removed.
	(OUTCMD_EVAL): New macro.
	(termout_eval): New function.
	(main): Print the value of Poke statement using OUTCMD_EVAL.

2022-03-11  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
