@@ -1,3 +1,9 @@
+2022-03-12  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* emacs/poke.el (poke-styling-faces): Fix faces names.
+	(poke-out-filter): Move proces marker whenever necessary.
+	(poke-open-file): s/E_generic_io/E-io.
+
 2022-03-11  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* pickles/diff.pk: Load pk-table.pk.
